--- a/hajkeats-cv/config/_default/config.toml
+++ b/hajkeats-cv/config/_default/config.toml
@@ -23,7 +23,7 @@ pygmentsCodeFencesGuessSyntax = true
     hideFooter = false
     hideCredits = true
     hideCopyright = false
-    since = 2019
+    since = 2020
 
     rtl = false
 
@@ -78,11 +78,11 @@ pygmentsCodeFencesGuessSyntax = true
     url = "/cv/"
     weight = 1
 
-#  [[menu.main]]
-#    identifier = "projects"
-#    name = "Projects"
-#    url = "/projects/"
-#    weight = 2
+  [[menu.main]]
+    identifier = "projects"
+    name = "Projects"
+    url = "/projects/"
+    weight = 2
 
   [[menu.main]]
     identifier = "about"
